[tool.poetry]
name = "generative-group-instance"
version = "0.1.0"
description = ""
authors = ["Dan-Andrei-Iliescu <iliescudanandrei@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.2"
tqdm = "^4.62.2"
fire = "^0.4.0"
torch = "^1.9.0"
joblib = "^1.0.1"
pandas = "^1.3.3"
opencv-python = "^4.5.5"
matplotlib = "^3.5.1"
librosa = "^0.10.0"
ipykernel = "^6.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
